# serializer version: 1
# name: test_project_check_output_matches_the_snapshot[bounded-dependency-bounds]
  list([
  ])
# ---
# name: test_project_check_output_matches_the_snapshot[floating-dependency-bounds]
  list([
    "pyproject.toml:5:1: dependency-bounds: project.dependencies: у 'pydantic>=2.13.5' нет потолка; закрепи (==) или ограничь (>=x,<y), иначе версию выберет решатель",
    "pyproject.toml:6:1: dependency-bounds: project.dependencies: у 'httpx' нет потолка; закрепи (==) или ограничь (>=x,<y), иначе версию выберет решатель",
    "pyproject.toml:10:1: dependency-bounds: dependency-groups.dev: у 'pytest>=9.1' нет потолка; закрепи (==) или ограничь (>=x,<y), иначе версию выберет решатель",
    "pyproject.toml:13:1: dependency-bounds: build-system.requires: у 'hatchling' нет потолка; закрепи (==) или ограничь (>=x,<y), иначе версию выберет решатель",
  ])
# ---
# name: test_project_check_output_matches_the_snapshot[schema_drift-schema-drift]
  list([
    'migrations/versions:1:1: schema-drift: `alembic upgrade head` вышел с 1',
  ])
# ---
